--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 :root {
   --background: #f6f3f4;
-  --primary: #6F8142;
+  --primary: #bb521f;
+  --darker: #863811;
   --secondary: #e8b74e;
   --headline: #232323;
-  --alt-text: #30492f;
-  --component-background: #bbc48d;
+  --alt-text: #6b2b0b;
+  --component-background: #d56531;
 }
 
 *{
@@ -15,9 +16,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--headline);
